<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:text="@string/text_view_nome_documento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textSize="22sp"
            android:padding="16dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Fatores de Risco Cardiovascular na avaliação do risco adicional no hipertenso"
            android:textSize="18sp"
            android:padding="16dp"/>

        <TextView
            android:text="@string/questao_01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <EditText
            android:id="@+id/edit_text_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:text="@string/questao_02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <EditText
            android:id="@+id/edit_text_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:text="@string/questao_03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <EditText
            android:id="@+id/edit_text_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:text="@string/questao_04"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <EditText
            android:id="@+id/edit_text_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <LinearLayout
            android:layout_width="234dp"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnVoltarTela5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="Voltar" />

            <Button
                android:id="@+id/btnSalvarTela5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnVoltarTela1"
                android:layout_width="111dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="Salvar" />


        </LinearLayout>

    </LinearLayout>

</ScrollView>