<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/text_view_nome_documento"
            android:textAlignment="center"
            android:textSize="22sp"
            android:padding="16dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Fatores de Risco Cardiovascular na avaliação do risco adicional no hipertenso"
            android:textSize="18sp"
            android:padding="16dp"/>

        <TextView
            android:text="@string/isquemico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ToggleButton
                android:id="@+id/toggleBtnSim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="Sim"
                android:textOff="Sim"
                />

            <ToggleButton
                android:id="@+id/toggleBtnNao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="Não"
                android:textOff="Não"
                android:checked="true"/>
        </LinearLayout>

        <TextView
            android:text="@string/hemorragia_cerebral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ToggleButton
                android:id="@+id/toggleBtnSim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="Sim"
                android:textOff="Sim"
                />

            <ToggleButton
                android:id="@+id/toggleBtnNao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="Não"
                android:textOff="Não"
                android:checked="true"/>
        </LinearLayout>

        <TextView
            android:text="@string/ait"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ToggleButton
                android:id="@+id/toggleBtnSim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="Sim"
                android:textOff="Sim"
                />

            <ToggleButton
                android:id="@+id/toggleBtnNao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="Não"
                android:textOff="Não"
                android:checked="true"/>
        </LinearLayout>

        <TextView
            android:text="@string/aei"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ToggleButton
                android:id="@+id/toggleBtnSim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="Sim"
                android:textOff="Sim"
                />

            <ToggleButton
                android:id="@+id/toggleBtnNao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="Não"
                android:textOff="Não"
                android:checked="true"/>
        </LinearLayout>

        <TextView
            android:text="@string/infarto_miocardio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ToggleButton
                android:id="@+id/toggleBtnSim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="Sim"
                android:textOff="Sim"
                />

            <ToggleButton
                android:id="@+id/toggleBtnNao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="Não"
                android:textOff="Não"
                android:checked="true"/>
        </LinearLayout>

        <TextView
            android:text="@string/r_miocardio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ToggleButton
                android:id="@+id/toggleBtnSim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="Sim"
                android:textOff="Sim"
                />

            <ToggleButton
                android:id="@+id/toggleBtnNao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="Não"
                android:textOff="Não"
                android:checked="true"/>
        </LinearLayout>

        <TextView
            android:text="@string/insuf_cardiaca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ToggleButton
                android:id="@+id/toggleBtnSim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="Sim"
                android:textOff="Sim"
                />

            <ToggleButton
                android:id="@+id/toggleBtnNao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="Não"
                android:textOff="Não"
                android:checked="true"/>
        </LinearLayout>

        <TextView
            android:text="@string/d_arterial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ToggleButton
                android:id="@+id/toggleBtnSim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="Sim"
                android:textOff="Sim"
                />

            <ToggleButton
                android:id="@+id/toggleBtnNao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="Não"
                android:textOff="Não"
                android:checked="true"/>
        </LinearLayout>

        <TextView
            android:text="@string/d_renal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ToggleButton
                android:id="@+id/toggleBtnSim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="Sim"
                android:textOff="Sim"
                />

            <ToggleButton
                android:id="@+id/toggleBtnNao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="Não"
                android:textOff="Não"
                android:checked="true"/>
        </LinearLayout>

        <TextView
            android:text="@string/retinoplatia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ToggleButton
                android:id="@+id/toggleBtnSim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="Sim"
                android:textOff="Sim"
                />

            <ToggleButton
                android:id="@+id/toggleBtnNao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="Não"
                android:textOff="Não"
                android:checked="true"/>
        </LinearLayout>

        <TextView
            android:text="@string/criterios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ToggleButton
                android:id="@+id/toggleBtnSim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="Sim"
                android:textOff="Sim"
                />

            <ToggleButton
                android:id="@+id/toggleBtnNao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="Não"
                android:textOff="Não"
                android:checked="true"/>
        </LinearLayout>

        <TextView
            android:text="@string/fator_de_risco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20dp"
            />

        <EditText
            android:id="@+id/edit_text_fator_de_risco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:padding="16dp"
            android:inputType="none"
            android:clickable="false"
            />

        <LinearLayout
            android:layout_width="234dp"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnVoltarTela4"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="Voltar" />

            <Button
                android:id="@+id/btnSeguinteTela4"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnVoltarTela1"
                android:layout_width="111dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="Seguinte" />


        </LinearLayout>

    </LinearLayout>

</ScrollView>